# silly_game

./: Cargo.toml  rustc-ice-2025-03-26T07_20_20-39717.txt  rustc-ice-2025-03-26T07_29_22-39970.txt  rustc-ice-2025-03-26T07_32_22-45226.txt  rustc-ice-2025-03-26T07_34_37-47573.txt
assets/: selector.xcf
src/: actions.rs  battle.rs  create.rs  events.rs  main.rs
src/battle/: body.rs  grid.rs  on_grid.rs  opponent.rs  selector.rs
src/battle/grid/: on_grid.rs
