cargo-features = ["codegen-backend"]

[package]
name = "silly_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_registration = { path = "../bevy_registration" }
bevy = { version = "0.15.3", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "multi_threaded",
    "png",
    "sysinfo_plugin",
    "vorbis",
    "x11",
    "ktx2",
    "smaa_luts",
    "zstd",
    "bevy_gizmos",
    "bevy_window",
    "tonemapping_luts",
] }
leafwing-input-manager = "0.16"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

[profile.dev.build-override]
codegen-backend = "llvm"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
codegen-backend = "llvm"

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

# Makes profiling work.
[profile.profiling]
inherits = "release"
debug = true